<resources>
    <string name="app_name">Tin tức</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

   <!-- string category-->
    <string name="ic_title_WORLD">Thế giới</string>
    <string name="ic_title_BUSINESS">Kinh doanh</string>
    <string name="ic_title_TECHNOLOGY">Công nghệ</string>
    <string name="ic_title_SPORT">Thể thao</string>
    <string name="ic_title_SOCIAL">Xã hội</string>
    <string name="ic_title_EDUCATION">Giáo dục</string>
    <string name="ic_title_BALANCE">Pháp luật</string>
    <string name="ic_title_ENTERTAINMENT">Giải trí</string>
    <string name="no_internet_connection">Không có kết nối internet</string>
    <string name="updated_just_now">Làm mới ngay bây giờ</string>
    <string name="no_news">Không có tin tức, kiểm tra internet</string>
    <!--string login,register-->
    <string name="btn_forgot_password">Quên mật khẩu?</string>
    <string name="btn_exit">Thoát ứng dụng</string>
    <string name="btn_back">Trở về</string>
    <string name="auth_failed">Kiểm tra số điện thoại hoặc đăng ký</string>
    <string name="btn_change">Thay đổi</string>
    <string name="btn_link_to_login">Tài khoản đã có, đăng nhập ngay!</string>
    <string name="action_sign_in_short">Đăng ký</string>
    <string name="btn_link_to_register">Chưa có tài khoản? Đăng ký với chúng tôi!</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_remove">Xóa</string>
    <string name="btn_reset_password">Xóa mật khẩu</string>
    <string name="btn_send">Gửi</string>
    <string name="btn_sign_out">Đăng xuất</string>
    <string name="change_email">Thay đổi email</string>
    <string name="change_password">Thay đổi password</string>
    <string name="err_msg_name">Nhập tên đầy đủ</string>
    <string name="err_msg_val_name">Tên người dùng không quá 30 kí tự</string>
    <string name="err_msg_password">Nhập mật khẩu</string>
    <string name="err_msg_phone">Số điện thoại không được bỏ trống</string>
    <string name="err_msg_val_phone">Số điện thoại sai hoặc không hợp lệ</string>
    <string name="hint_name">Nhập tên</string>
    <string name="hint_new_email">Email mới</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_phone">Nhập số điện thoại</string>
    <string name="checkbox_Remember">Lưu tài khoản ?</string>
    <string name="minimum_password">Mật khẩu quá ngắn, tối thiểu ít nhất 6 ký tự</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="prompt_password">Vui lòng nhập mật khẩu</string>
    <string name="remove_user">Xóa người dùng</string>
    <string name="send_password_reset_email">"Gửi mã "</string>
    <string name="title_activity_login">Đăng Nhập</string>
    <string name="title_activity_register">Đăng ký</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="login_fail">Đăng nhập thất bại</string>
    <string name="wrong_password">Sai mật khẩu</string>
    <string name="user_not_exists">Số điện thoại không tồn tại</string>
    <string name="phone_already_register">Số điện thoại đã đăng ký</string>
    <string name="signup_sucessfully">Đăng ký thành công</string>
</resources>
