<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linear"
    android:background="@drawable/bg">
    <android.support.v7.widget.CardView
        android:layout_margin="20dp"
        app:cardCornerRadius="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/title_activity_login"
                    android:gravity="center"
                    android:textColor="#0094d6"
                    android:textSize="20dp">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:gravity="center"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="#FBFAFF">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/phone_input_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:counterEnabled="true"
                        app:counterMaxLength="10">
                        <EditText
                            android:id="@+id/InputPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_phone"
                            android:inputType="phone"
                            android:lines="1"
                            android:singleLine="true"
                            android:textSize="16dp"
                            />
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:background="#FBFAFF">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/password_input_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">
                        <EditText
                            android:id="@+id/InputPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:textSize="16dp"
                            android:lines="1"
                            android:singleLine="true"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.v7.widget.AppCompatCheckBox
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/password_input_editText"
                        android:id="@+id/checkboxRemember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkbox_Remember"
                        android:textSize="12dp"
                        android:layout_gravity="right"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/design_default_color_primary"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:gravity="center"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <Button
                        android:layout_margin="10dp"
                        android:id="@+id/btnLogin"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="35dp"
                        android:onClick="SignIn"
                        android:text="@string/title_activity_login"
                        android:textColor="#ffffff"
                        android:enabled="false"
                        android:alpha="0.4"
                        android:background="@drawable/radius_signin"
                        android:layout_marginBottom="10dp"/>
                    <Button
                        android:layout_margin="10dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="35dp"
                        android:text="@string/btn_exit"
                        android:onClick="Back"
                        android:background="@drawable/radius_back"
                        android:textColor="#ffffff"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:orientation="vertical"
                android:background="@color/design_default_color_primary">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_link_to_register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@null"
                    android:onClick="Link_SignUpCar"
                    />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>