<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative"
    android:background="@null">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/linRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_above="@id/linRegister"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="50dp"
                        android:text="@string/title_activity_register"
                        android:textColor="#0094d6"
                        android:textSize="20dp"></TextView>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/phone_input_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="10"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/editPhone"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="0dp"
                            android:hint="@string/hint_phone"
                            android:inputType="phone"
                            android:textSize="17dp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/Name_input_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="30"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/editName"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/hint_name"
                            android:inputType="textPersonName"
                            android:textSize="17dp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/Pass_input_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/editPass"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginBottom="0dp"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:textSize="17dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <Button
                                android:id="@+id/btn_register"
                                android:layout_width="0dp"
                                android:layout_height="35dp"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:background="@drawable/radius_signup"
                                android:onClick="SignUp"
                                android:text="@string/title_activity_register"
                                android:enabled="false"
                                android:alpha="0.4"
                                android:textColor="#ffffff" />

                            <Button
                                android:layout_width="0dp"
                                android:layout_height="35dp"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:background="@drawable/radius_back"
                                android:onClick="Back"
                                android:text="@string/btn_back"
                                android:textColor="#ffffff" />
                        </LinearLayout>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>